remove user_badges, user_food, user_messages, v1 autosave every 5 seconds

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -15,7 +15,7 @@ template(name='youtube_view')
             //- i.icon(class=icon)
         .ui.embed(data-source="youtube" data-id=field_value)
 
-        //- // iframe(width='560' height='315' src="https://www.youtube.com/embed/#{field_value}" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+        // iframe(width='560' height='315' src="https://www.youtube.com/embed/#{field_value}" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
         //- iframe(src="https://www.youtube.com/embed/#{field_value}" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
 template(name='color_edit')
     .ui.large.form
