--- a/client/watson.jade
+++ b/client/watson.jade
@@ -101,11 +101,11 @@ template(name='doc_emotion_small')
     span.rounde(style="height:3px;width:{{to_percent anger_percent}}%;background-color:red" title="{{to_percent anger_percent}}% anger")
     // .spacer
 template(name='call_watson')
-    button.ui.large.button.autotag
+    button.ui.large.fluid.basic.circular.button.autotag
         i.dna.icon
+        if current_doc.watson 
+            i.checkmark.green.icon
         |autotag
-    if page_doc.watson 
-        i.checkmark.icon
 
 template(name='autotag')
     button.ui.large.icon.button.autotag
