--- a/parts/profile/profile.jade
+++ b/parts/profile/profile.jade
@@ -1,8 +1,6 @@
 template(name='profile_layout')
     +nav
     .ui.bottom.attached.pushable.segment
-        // +top_sidebar
-        +left_sidebar
         +right_sidebar
         #main_area.global_container.pusher
             with user
@@ -14,46 +12,46 @@ template(name='profile_layout')
                             |users
                         span.mobile.only
                             a(href="/u/#{username}/")
-                                img.ui.centered.tiny.inline.spaced.rounded.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}")
+                                img.ui.centered.tiny.inline.spaced.circular.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}")
                         span.mobile.hidden
                             a(href="/u/#{username}/")
-                                img.ui.centered.fluid.rounded.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}") 
+                                img.ui.centered.fluid.circular.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}") 
                         a.ui.header.refresh_user_stats(href="/u/#{username}") 
                             |#{name}
                         // div
                         a.ui.small.header.refresh_user_stats(href="/u/#{username}") 
                             |@#{username}
                         if is_admin
-                            a.ui.basic.button(href="/u/#{username}/edit" title='admin edit account')
+                            a.ui.basic.circular.button(href="/u/#{username}/edit" title='admin edit account')
                                 i.shield.large.icon
                                 |account
                         if is_current_user
-                            a.ui.basic.button(href="/u/#{username}/edit" title='edit your account')
+                            a.ui.basic.circular.button(href="/u/#{username}/edit" title='edit your account')
                                 i.cog.icon
                                 |account
-                            a.ui.basic.button.logout(href="#" title='log out')
+                            a.ui.basic.circular.button.logout(href="#" title='log out')
                                 i.sign.out.icon
                                 |log out
-                        // .ui.inline.header() #{points}pts
+                        .ui.inline.header() #{points}pts
                         .ui.basic.label {{to_percent one_ratio}}% ratio
                         .ui.basic.label #{flow_volume} volume
                         //- .ui.icon.button.refresh_user_stats(title='refresh stats')
                         //-     i.refresh.icon
-                        if is_current_user
-                            +boolean_edit key='online' label='online' direct=true
-                            +text_edit key='current_status' label='status' icon='clock' direct=true
-                        else 
-                            if online 
-                                .ui.green.large.label 
-                                    i.large.checkmark.icon
-                                    |online
-                            else
-                                .ui.disabled.large.label 
-                                    |offline
-                            if current_status
-                                .ui.small.header(title='status' )
-                                    i.grey.clock.icon
-                                    |!{current_status}
+                        // if is_current_user
+                        //     +boolean_edit key='online' label='online' direct=true
+                        //     +text_edit key='current_status' label='status' icon='clock' direct=true
+                        // else 
+                        //     if online 
+                        //         .ui.green.large.label 
+                        //             i.large.checkmark.icon
+                        //             |online
+                        //     else
+                        //         .ui.disabled.large.label 
+                        //             |offline
+                        //     if current_status
+                        //         .ui.small.header(title='status' )
+                        //             i.grey.clock.icon
+                        //             |!{current_status}
                         if is_dev
                             .ui.small.inline.header #{_id}
 
@@ -69,26 +67,14 @@ template(name='profile_layout')
                             .ui.basic.button.send(title='send points')
                                 i.red.gift.large.icon
                                 span send pts
-                            // .ui.basic.button.request(title='request points')
-                            //     i.concierge.bell.large.teal.icon
-                            //     span request
                         else
                             .ui.disabled.basic.button(title='send points')
                                 i.red.gift.large.icon
                                 span send pts
-                            // .ui.disabled.basic.button(title='request points')
-                            //     i.concierge.bell.teal.icon
-                            //     span request
-                        a.ui.basic.button(href="/u/#{username}/messages" class="{{isActiveRoute 'user_messages'}}" title="#{user.username} messages")
-                            i.chat.large.blue.icon
-                            | message
                     .twelve.wide.column
                         a.ui.compact.basic.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/" class="{{isActiveRoute 'user_dashboard'}}" title="#{user.username} dashboard")
                             i.large.dashboard.icon
                             span dashboard
-                        a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/about" class="{{isActiveRoute 'user_about'}}" title="#{user.username} info")
-                            i.info.large.icon
-                            span about
                         a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/credits" class="{{isActiveRoute 'user_credits'}}" title="#{user.username} credits")
                             i.large.chevron.down.icon
                             span pts received
@@ -98,36 +84,9 @@ template(name='profile_layout')
                         a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/credit" class="{{isActiveRoute 'user_credit'}}" title="#{user.username} credit")
                             i.large.dollar.icon
                             span credit
-                        // a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/events" class="{{isActiveRoute 'user_events'}}" title="#{user.username} events")
-                        //     i.calendar.large.icon
-                        //     span events
                         a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/friends" class="{{isActiveRoute 'user_friends'}}" title="#{user.username} friends")
                             i.users.large.icon
                             span friends
-                        // a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/requests" class="{{isActiveRoute 'user_requests'}}" title="#{user.username} requests")
-                        //     i.large.concierge.bell.icon
-                        //     span requests
-                        // a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/offers" class="{{isActiveRoute 'user_offers'}}" title="#{user.username} offers")
-                        //     i.large.hand.holding.heart.icon
-                        //     span offers
-                        // a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/messages" class="{{isActiveRoute 'user_messages'}}" title="#{user.username} messages")
-                        //     i.chat.large.icon
-                        //     span chat
-                        // a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/delivery" class="{{isActiveRoute 'user_delivery'}}" title="#{user.username} delivery")
-                        //     i.large.truck.icon
-                        //     span delivery
-                        // a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/tribes" class="{{isActiveRoute 'user_tribes'}}" title="#{user.username} messages")
-                        //     i.fire.large.icon
-                        //     span tribes
-   
-                        // a.ui.basic.compact.tertiary.button(href="/u/#{username}/badges" class="{{isActiveRoute 'user_badges'}}" title="#{user.username} badges")
-                        //     i.certificate.large.icon
-                        //     span.mobile.hidden badges
-                        // a.ui.basic.compact.tertiary.button(href="/u/#{username}/food" class="{{isActiveRoute 'user_food'}}" title="#{user.username} food")
-                        //     i.large.food.icon
-                        //     span food
-                        // .spacer
-                        // .spacer
                         if is_dev
                             +print_this
                         .ui.hidden.divider
