--- a/parts/group.jade
+++ b/parts/group.jade
@@ -60,6 +60,12 @@ template(name='group')
                 .ui.compact.button.set_list(class=list_class)
                     i.list.icon
                     |list
+            .ui.circular.icon.basic.button
+                i.film.icon
+            .ui.circular.icon.basic.button
+                i.picture.icon
+            .ui.circular.icon.basic.button
+                i.chat.icon
             .scrolling
                 if posts.count
                     // if skv_is 'view_layout' 'grid'
