remove user_edit info, hide 2nd profile pic, add group creation/link on profile

--- a/client/style.css
+++ b/client/style.css
@@ -348,7 +348,7 @@ input
 
 .card {
     /* background: black !important; */
-    border-radius: 10px !important; 
+    /*border-radius: 10px !important; */
 }
 
 a.goto_article {
