some working sort_direction, card and list switch, fixed timestamp tags

--- a/parts/blocks.jade
+++ b/parts/blocks.jade
@@ -101,8 +101,8 @@ template(name='comments')
                     span.actions
                         if can_edit
                             +remove_icon
-                        else
-                            +voting_small
+                        // else
+                        +voting_small
 
 
 
