--- a/parts/profile/profile.jade
+++ b/parts/profile/profile.jade
@@ -35,23 +35,12 @@ template(name='profile_layout')
                             label goto/create group
                         .ui.input
                             input.goto_group(type='text' placeholder='name')
+                        each group_bookmarks
+                            a.ui.basic.label(href="/g/#{name}")
+                                i.remove.icon
+                                |#{name}
                         //- .ui.icon.button.refresh_user_stats(title='refresh stats')
                         //-     i.refresh.icon
-                        // if is_current_user
-                        //     +boolean_edit key='online' label='online' direct=true
-                        //     +text_edit key='current_status' label='status' icon='clock' direct=true
-                        // else 
-                        //     if online 
-                        //         .ui.green.large.label 
-                        //             i.large.checkmark.icon
-                        //             |online
-                        //     else
-                        //         .ui.disabled.large.label 
-                        //             |offline
-                        //     if current_status
-                        //         .ui.small.header(title='status' )
-                        //             i.grey.clock.icon
-                        //             |!{current_status}
                         if is_dev
                             .ui.small.inline.header #{_id}
 
@@ -115,3 +104,106 @@ template(name='user_friend_button')
             .visible.content
                 i.user.plus.large.icon
                 |friend
+
+
+template(name='user_dashboard')
+    .ui.stackable.grid
+        .row
+            .sixteen.wide.column
+                .ui.header 
+                    i.chat.icon
+                    |comments
+                .ui.header 
+                    i.newspaper.icon
+                    |posts
+                .ui.header 
+                    i.donate.icon
+                    |tips
+        .three.column.row
+            .column
+                a.ui.inline.header(href="/u/#{username}/credits")
+                    i.chevron.down.large.icon
+                    |#{total_credit_amount}p
+                    // |received
+                    small(title='received count') (#{credit_count}x) 
+                    small(title='rank') ##{global_credit_count_rank}
+                i.tags.icon(title='credit tags')
+                each credit_tags
+                    .ui.small.basic.label #{title}
+                        // small #{count}
+                .medscroll.ui.segments
+                    each user_credits
+                        +user_credit_segment
+            .column
+                a.ui.inline.spaced.header(href="/u/#{username}/debits")
+                    i.chevron.up.icon
+                    |#{total_debit_amount}p
+                    // |sent
+                    small(title='debit count') (#{debit_count}x)
+                    small(title='rank') ##{global_debit_count_rank}
+                i.tags.icon(title='credit tags')
+                each debit_tags
+                    .ui.small.basic.label #{title} 
+                        // small #{count}
+    
+                div
+                .medscroll.ui.segments
+                    each user_debits
+                        +user_debit_segment
+            .column
+                +user_bookmarks_widget
+
+
+template(name='user_bookmarks_widget')
+    a.ui.header(href="/u/#{username}/bookmarks")
+        i.bookmark.icon(title='bookmark tags')
+        |bookmarks
+    each bookmark_tags
+        .ui.small.basic.label #{title} 
+    div
+    .medscroll.ui.segments
+        each user_bookmark_docs
+            .ui.header #{title}
+
+
+
+template(name='user_checkin_segment')
+    .ui.segment.user_checkin_segment.pointer.zoom
+        with drink_ref
+            img.ui.avatar.image(src="{{c.url image_id width=400 height=400 crop='fill'}}")
+            |#{title}
+        |#{body}
+        small #{when}
+        each tags
+            .ui.mini.basic.label #{this}
+
+template(name='user_credit_segment')
+    .ui.segment.user_credit_segment.pointer.zoom
+        .header
+            strong #{amount}pt 
+            // |from 
+            if author.profile_image_id
+                img.ui.avatar.image(src="{{c.url author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+            |#{_author.shortname}
+        small #{when}
+        div
+        |#{description}
+        div
+        each tags
+            .ui.mini.basic.label #{this}
+
+
+template(name='user_debit_segment')
+    .ui.segment.user_debit_segment.pointer.zoom
+        .header
+            strong #{amount}pt
+            | to 
+            if recipient.profile_image_id
+                img.ui.avatar.image(src="{{c.url recipient.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+            |#{recipient.shortname}
+        small #{when}
+        div
+        |#{description}
+        div
+        each tags
+            .ui.mini.basic.label #{this}
